components/alertmanager/configs/home/ingress-alertmanager.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: alertmanager
  annotations:
    tailscale.com/proxy-group: private-ingress
    tailscale.com/tags: tag:k8s-private
    tailscale.com/http-redirect: "true"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Alertmanager"
    gethomepage.dev/group: "Infrastructure"
    gethomepage.dev/icon: "alertmanager.png"
    gethomepage.dev/href: "https://alertmanager.tail0c49c.ts.net"
    gethomepage.dev/app: "alertmanager"

spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - alertmanager
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alertmanager
                port:
                  number: 9093
